StateMachine/Antlr/StateMachineScriptParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:/Users/zhiyuan/source/repos/AnotherFSM/StateMachine/Engine/StateMachineScript.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class StateMachineScriptParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, NONE=17, 
		NEXT=18, SUCCESS=19, FAILED=20, ERROR=21, BREAK=22, CANCEL=23, TRIGGER=24, 
		COLON=25, SEMICOLON=26, STRING=27, CODESTRING=28, INT=29, DOUBLE=30, WS=31, 
		COMMENT=32, LINE_COMMENT=33;
	public const int
		RULE_machine = 0, RULE_namespace = 1, RULE_expression = 2, RULE_state_statement = 3, 
		RULE_state_branch = 4, RULE_state_group = 5, RULE_position = 6, RULE_posx = 7, 
		RULE_posy = 8, RULE_event_statement = 9, RULE_transition = 10;
	public static readonly string[] ruleNames = {
		"machine", "namespace", "expression", "state_statement", "state_branch", 
		"state_group", "position", "posx", "posy", "event_statement", "transition"
	};

	private static readonly string[] _LiteralNames = {
		null, "'namespace'", "'{'", "'}'", "'def'", "'as'", "'state'", "'('", 
		"')'", "'branch'", "'Pos'", "'Color'", "'Type'", "'FlowID'", "'to'", "','", 
		"'event'", "'none'", "'next'", "'success'", "'failed'", "'error'", "'break'", 
		"'cancel'", null, "':'", "';'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, "NONE", "NEXT", "SUCCESS", "FAILED", "ERROR", 
		"BREAK", "CANCEL", "TRIGGER", "COLON", "SEMICOLON", "STRING", "CODESTRING", 
		"INT", "DOUBLE", "WS", "COMMENT", "LINE_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "StateMachineScript.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static StateMachineScriptParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public StateMachineScriptParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public StateMachineScriptParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class MachineContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NamespaceContext[] @namespace() {
			return GetRuleContexts<NamespaceContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public NamespaceContext @namespace(int i) {
			return GetRuleContext<NamespaceContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(StateMachineScriptParser.Eof, 0); }
		public MachineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_machine; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IStateMachineScriptListener typedListener = listener as IStateMachineScriptListener;
			if (typedListener != null) typedListener.EnterMachine(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IStateMachineScriptListener typedListener = listener as IStateMachineScriptListener;
			if (typedListener != null) typedListener.ExitMachine(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStateMachineScriptVisitor<TResult> typedVisitor = visitor as IStateMachineScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMachine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MachineContext machine() {
		MachineContext _localctx = new MachineContext(Context, State);
		EnterRule(_localctx, 0, RULE_machine);
		int _la;
		try {
			State = 35;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 25;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 687488528L) != 0)) {
					{
					{
					State = 22;
					expression();
					}
					}
					State = 27;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 31;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==T__0) {
					{
					{
					State = 28;
					@namespace();
					}
					}
					State = 33;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 34;
				Match(Eof);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NamespaceContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(StateMachineScriptParser.STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public NamespaceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_namespace; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IStateMachineScriptListener typedListener = listener as IStateMachineScriptListener;
			if (typedListener != null) typedListener.EnterNamespace(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IStateMachineScriptListener typedListener = listener as IStateMachineScriptListener;
			if (typedListener != null) typedListener.ExitNamespace(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStateMachineScriptVisitor<TResult> typedVisitor = visitor as IStateMachineScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNamespace(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NamespaceContext @namespace() {
		NamespaceContext _localctx = new NamespaceContext(Context, State);
		EnterRule(_localctx, 2, RULE_namespace);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 37;
			Match(T__0);
			State = 38;
			Match(STRING);
			State = 39;
			Match(T__1);
			State = 43;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 687488528L) != 0)) {
				{
				{
				State = 40;
				expression();
				}
				}
				State = 45;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 46;
			Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public State_statementContext state_statement() {
			return GetRuleContext<State_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Event_statementContext event_statement() {
			return GetRuleContext<Event_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TransitionContext transition() {
			return GetRuleContext<TransitionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public State_branchContext state_branch() {
			return GetRuleContext<State_branchContext>(0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IStateMachineScriptListener typedListener = listener as IStateMachineScriptListener;
			if (typedListener != null) typedListener.EnterExpression(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IStateMachineScriptListener typedListener = listener as IStateMachineScriptListener;
			if (typedListener != null) typedListener.ExitExpression(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStateMachineScriptVisitor<TResult> typedVisitor = visitor as IStateMachineScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionContext expression() {
		ExpressionContext _localctx = new ExpressionContext(Context, State);
		EnterRule(_localctx, 4, RULE_expression);
		try {
			State = 52;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 48;
				state_statement();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 49;
				event_statement();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 50;
				transition();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 51;
				state_branch();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class State_statementContext : ParserRuleContext {
		public State_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_state_statement; } }
	 
		public State_statementContext() { }
		public virtual void CopyFrom(State_statementContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class DefState2Context : State_statementContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] STRING() { return GetTokens(StateMachineScriptParser.STRING); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING(int i) {
			return GetToken(StateMachineScriptParser.STRING, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public State_branchContext[] state_branch() {
			return GetRuleContexts<State_branchContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public State_branchContext state_branch(int i) {
			return GetRuleContext<State_branchContext>(i);
		}
		public DefState2Context(State_statementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IStateMachineScriptListener typedListener = listener as IStateMachineScriptListener;
			if (typedListener != null) typedListener.EnterDefState2(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IStateMachineScriptListener typedListener = listener as IStateMachineScriptListener;
			if (typedListener != null) typedListener.ExitDefState2(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStateMachineScriptVisitor<TResult> typedVisitor = visitor as IStateMachineScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDefState2(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class DefStateContext : State_statementContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] STRING() { return GetTokens(StateMachineScriptParser.STRING); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING(int i) {
			return GetToken(StateMachineScriptParser.STRING, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public State_branchContext[] state_branch() {
			return GetRuleContexts<State_branchContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public State_branchContext state_branch(int i) {
			return GetRuleContext<State_branchContext>(i);
		}
		public DefStateContext(State_statementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IStateMachineScriptListener typedListener = listener as IStateMachineScriptListener;
			if (typedListener != null) typedListener.EnterDefState(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IStateMachineScriptListener typedListener = listener as IStateMachineScriptListener;
			if (typedListener != null) typedListener.ExitDefState(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStateMachineScriptVisitor<TResult> typedVisitor = visitor as IStateMachineScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDefState(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public State_statementContext state_statement() {
		State_statementContext _localctx = new State_statementContext(Context, State);
		EnterRule(_localctx, 6, RULE_state_statement);
		int _la;
		try {
			State = 84;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,9,Context) ) {
			case 1:
				_localctx = new DefStateContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 54;
				Match(T__3);
				State = 55;
				Match(STRING);
				State = 56;
				Match(T__4);
				State = 58;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==STRING) {
					{
					State = 57;
					Match(STRING);
					}
				}

				State = 60;
				Match(T__5);
				State = 61;
				Match(T__1);
				State = 65;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 553270784L) != 0)) {
					{
					{
					State = 62;
					state_branch();
					}
					}
					State = 67;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 68;
				Match(T__2);
				}
				break;
			case 2:
				_localctx = new DefState2Context(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 69;
				Match(T__3);
				State = 70;
				Match(STRING);
				State = 71;
				Match(T__6);
				State = 73;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==STRING) {
					{
					State = 72;
					Match(STRING);
					}
				}

				State = 75;
				Match(T__7);
				State = 76;
				Match(T__1);
				State = 80;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 553270784L) != 0)) {
					{
					{
					State = 77;
					state_branch();
					}
					}
					State = 82;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 83;
				Match(T__2);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class State_branchContext : ParserRuleContext {
		public State_branchContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_state_branch; } }
	 
		public State_branchContext() { }
		public virtual void CopyFrom(State_branchContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class FlowIDDefContext : State_branchContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLON() { return GetToken(StateMachineScriptParser.COLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(StateMachineScriptParser.SEMICOLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(StateMachineScriptParser.STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(StateMachineScriptParser.INT, 0); }
		public FlowIDDefContext(State_branchContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IStateMachineScriptListener typedListener = listener as IStateMachineScriptListener;
			if (typedListener != null) typedListener.EnterFlowIDDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IStateMachineScriptListener typedListener = listener as IStateMachineScriptListener;
			if (typedListener != null) typedListener.ExitFlowIDDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStateMachineScriptVisitor<TResult> typedVisitor = visitor as IStateMachineScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFlowIDDef(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class DefBranchContext : State_branchContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(StateMachineScriptParser.INT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TRIGGER() { return GetToken(StateMachineScriptParser.TRIGGER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(StateMachineScriptParser.STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(StateMachineScriptParser.SEMICOLON, 0); }
		public DefBranchContext(State_branchContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IStateMachineScriptListener typedListener = listener as IStateMachineScriptListener;
			if (typedListener != null) typedListener.EnterDefBranch(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IStateMachineScriptListener typedListener = listener as IStateMachineScriptListener;
			if (typedListener != null) typedListener.ExitDefBranch(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStateMachineScriptVisitor<TResult> typedVisitor = visitor as IStateMachineScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDefBranch(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PosDefContext : State_branchContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLON() { return GetToken(StateMachineScriptParser.COLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public PositionContext position() {
			return GetRuleContext<PositionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(StateMachineScriptParser.SEMICOLON, 0); }
		public PosDefContext(State_branchContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IStateMachineScriptListener typedListener = listener as IStateMachineScriptListener;
			if (typedListener != null) typedListener.EnterPosDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IStateMachineScriptListener typedListener = listener as IStateMachineScriptListener;
			if (typedListener != null) typedListener.ExitPosDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStateMachineScriptVisitor<TResult> typedVisitor = visitor as IStateMachineScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPosDef(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class TypeDefContext : State_branchContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLON() { return GetToken(StateMachineScriptParser.COLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(StateMachineScriptParser.STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(StateMachineScriptParser.SEMICOLON, 0); }
		public TypeDefContext(State_branchContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IStateMachineScriptListener typedListener = listener as IStateMachineScriptListener;
			if (typedListener != null) typedListener.EnterTypeDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IStateMachineScriptListener typedListener = listener as IStateMachineScriptListener;
			if (typedListener != null) typedListener.ExitTypeDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStateMachineScriptVisitor<TResult> typedVisitor = visitor as IStateMachineScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypeDef(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class DefBranch2Context : State_branchContext {
		public IToken branch_type;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TRIGGER() { return GetToken(StateMachineScriptParser.TRIGGER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(StateMachineScriptParser.STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(StateMachineScriptParser.SEMICOLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(StateMachineScriptParser.INT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NONE() { return GetToken(StateMachineScriptParser.NONE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SUCCESS() { return GetToken(StateMachineScriptParser.SUCCESS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FAILED() { return GetToken(StateMachineScriptParser.FAILED, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ERROR() { return GetToken(StateMachineScriptParser.ERROR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BREAK() { return GetToken(StateMachineScriptParser.BREAK, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CANCEL() { return GetToken(StateMachineScriptParser.CANCEL, 0); }
		public DefBranch2Context(State_branchContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IStateMachineScriptListener typedListener = listener as IStateMachineScriptListener;
			if (typedListener != null) typedListener.EnterDefBranch2(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IStateMachineScriptListener typedListener = listener as IStateMachineScriptListener;
			if (typedListener != null) typedListener.ExitDefBranch2(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStateMachineScriptVisitor<TResult> typedVisitor = visitor as IStateMachineScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDefBranch2(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ColorDefContext : State_branchContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLON() { return GetToken(StateMachineScriptParser.COLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CODESTRING() { return GetToken(StateMachineScriptParser.CODESTRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(StateMachineScriptParser.SEMICOLON, 0); }
		public ColorDefContext(State_branchContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IStateMachineScriptListener typedListener = listener as IStateMachineScriptListener;
			if (typedListener != null) typedListener.EnterColorDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IStateMachineScriptListener typedListener = listener as IStateMachineScriptListener;
			if (typedListener != null) typedListener.ExitColorDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStateMachineScriptVisitor<TResult> typedVisitor = visitor as IStateMachineScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitColorDef(this);
			else return visitor.VisitChildren(this);
		}
	}
